--- a/_i18n_xliff/UnitedPizzaHelper Localizations/ru.xcloc/Localized Contents/ru.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/ru.xcloc/Localized Contents/ru.xliff
@@ -487,6 +487,21 @@ Tap anywhere to dismiss.</source>
         <target state="translated">Проверка обновлений базы данных выполнялась ранее в:</target>
         <note/>
       </trans-unit>
+      <trans-unit id="settings.display.enkaStatus.resetEnkaDBCacheToFactoryDefault" xml:space="preserve">
+        <source>Reset EnkaDB Cache to Factory Default</source>
+        <target state="translated">Сбросить кэш EnkaDB до заводских настроек</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="settings.display.enkaStatus.resetEnkaDBCacheToFactoryDefault.confirmButton" xml:space="preserve">
+        <source>Reset</source>
+        <target state="translated">Сбросить</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="settings.display.enkaStatus.resetEnkaDBCacheToFactoryDefault.confirmationTitle" xml:space="preserve">
+        <source>Are you sure you want to reset the EnkaDB cache?</source>
+        <target state="translated">Вы уверены, что хотите сбросить кэш EnkaDB?</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="settings.display.enkaStatus.sectionTitle" xml:space="preserve">
         <source>On-Device Enka Database Status</source>
         <target state="translated">Статус локальной базы данных Enka</target>
@@ -1978,6 +1993,11 @@ App Icon Illustrator, The Pizza Helper (v5.0)</source>
         <target state="translated">Устарело и интегрировано в The Pizza Helper</target>
         <note/>
       </trans-unit>
+      <trans-unit id="oobe.button.next" xml:space="preserve">
+        <source>Next</source>
+        <target state="translated">Далее</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="oobe.feature.backupYourData.detail" xml:space="preserve">
         <source>FOSS never means eternal availability / reliability. Be responsible to your data by proactively exporting your gacha records as UIGF files for backup.</source>
         <target state="translated">FOSS никогда не означает вечную доступность / надежность. Будьте ответственны за свои данные, проактивно экспортируя записи гачи в виде файлов UIGF для резервного копирования.</target>
@@ -2016,6 +2036,16 @@ App Icon Illustrator, The Pizza Helper (v5.0)</source>
       <trans-unit id="oobe.feature.notification.title" xml:space="preserve">
         <source>Notifications</source>
         <target state="translated">Уведомления</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="oobe.feature.refugeeFromThePizzaHelper.detail" xml:space="preserve">
+        <source>Your refugee plist file needs to be imported twice: first into the Local Profile Manager, and then into the Gacha Record Manager. These two modules will parse their respective data from the file.</source>
+        <target state="translated">Ваш файл refugee plist необходимо импортировать дважды: сначала в Менеджер локальных профилей, а затем в Менеджер записей гача. Эти два модуля извлекут свои соответствующие типы данных из файла.</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="oobe.feature.refugeeFromThePizzaHelper.title" xml:space="preserve">
+        <source>Refugee from The Pizza Helper?</source>
+        <target state="translated">Refugee из The Pizza Helper?</target>
         <note/>
       </trans-unit>
       <trans-unit id="oobe.feature.widget.detail:%@" xml:space="preserve">
@@ -2714,13 +2744,38 @@ The above link, if directly clicked, will automatically apply the user-agent of 
         <note/>
       </trans-unit>
       <trans-unit id="refugee.export.fileSavedTo:" xml:space="preserve">
-        <source>Successfully dumped the Old Pizza Refugee Data file to:</source>
-        <target state="translated">Файл данных Old Pizza Refugee успешно экспортирован в:</target>
+        <source>File successfully dumped to:</source>
+        <target state="translated">Файл успешно экспортирован в:</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="refugee.export.fileType.profiles" xml:space="preserve">
+        <source>📁 File Type: Profiles Package (JSON)</source>
+        <target state="translated">📁 Тип файла: Пакет профилей (JSON)</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="refugee.export.fileType.refugee" xml:space="preserve">
+        <source>📁 File Type: Old Pizza Refugee Data (Plist)</source>
+        <target state="translated">📁 Тип файла: Данные Old Pizza Refugee (Plist)</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="refugee.export.fileType.wallpapers" xml:space="preserve">
+        <source>📁 File Type: User Wallpapers (JSON)</source>
+        <target state="translated">📁 Тип файла: Пользовательские обои (JSON)</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="refugee.export.refugeeFileHowToUse" xml:space="preserve">
+        <source>ℹ️ On the target device you are expected to import this file in both the Local Profile Manager and the Gacha Record Manager. These two feature modules extract different types of data from the refugee plist file.</source>
+        <target state="translated">ℹ️ На целевом устройстве вам нужно импортировать этот файл как в Менеджер локальных профилей, так и в Менеджер записей гача. Эти два модуля функций извлекают разные типы данных из файла refugee plist.</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="refugee.export.refugeeFileSpecialNotice4iOS17" xml:space="preserve">
+        <source>⚠️ This refugee plist file does not include user wallpapers due to technical limitations and file size concerns. Please export them separately.</source>
+        <target state="translated">⚠️ Этот файл трудовых plist не включает пользовательские обои из-за технических ограничений и проблем с размером файла. Пожалуйста, экспортируйте их отдельно.</target>
         <note/>
       </trans-unit>
       <trans-unit id="refugee.export.succeededInSavingToFile" xml:space="preserve">
-        <source>Successfully dumped the Old Pizza Refugee Data file.</source>
-        <target state="translated">Файл данных Old Pizza Refugee успешно экспортирован.</target>
+        <source>The file is successfully dumped.</source>
+        <target state="translated">Файл успешно экспортирован.</target>
         <note/>
       </trans-unit>
       <trans-unit id="refugee.exportableCount.gachaEntries" xml:space="preserve">
@@ -2787,7 +2842,7 @@ The successor to this app will be available on the App Store under the new name 
         <note/>
       </trans-unit>
       <trans-unit id="refugee.limitedServiceCategory4iOS16.footer" xml:space="preserve">
-        <source>Only widgets are available for iOS 16.2 &amp; macOS 13. Other features still require iOS 17 / macOS 14 or newer. If you see anything buggy while navigating in the Locale Profile Manager, it’s due to those SwiftUI-related bugs plagued in iOS 16 / macOS 13 and your only solution is to upgrade to iOS 17 / macOS 14.</source>
+        <source>Only widgets are available for iOS 16.2 &amp; macOS 13. Other features still require iOS 17 / macOS 14 or newer. If you see anything buggy while navigating in the Local Profile Manager, it’s due to those SwiftUI-related bugs plagued in iOS 16 / macOS 13 and your only solution is to upgrade to iOS 17 / macOS 14.</source>
         <target state="translated">Только виджеты доступны для iOS 16.2 и macOS 13. Для других функций требуется iOS 17 / macOS 14 или новее. Если вы заметили ошибки при работе с менеджером локальных профилей, это связано с багами SwiftUI в iOS 16 / macOS 13. Единственное решение — обновиться до iOS 17 / macOS 14.</target>
         <note/>
       </trans-unit>
@@ -2821,14 +2876,49 @@ The successor to this app will be available on the App Store under the new name 
         <target state="translated">Нажмите для запуска</target>
         <note/>
       </trans-unit>
+      <trans-unit id="refugee.menu.export.all" xml:space="preserve">
+        <source>Export All Contents as Refugee Plist Package</source>
+        <target state="translated">Экспортировать все содержимое как пакет данных беженцев (Plist)</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="refugee.menu.export.gachaRecordsAsUIGFv4" xml:space="preserve">
+        <source>Export Gacha Records (UIGFv4 JSON)</source>
+        <target state="translated">Экспортировать записи гача (UIGFv4 JSON)</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="refugee.menu.export.profiles" xml:space="preserve">
+        <source>Export Profiles (JSON)</source>
+        <target state="translated">Экспортировать профили (JSON)</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="refugee.menu.export.wallpapers" xml:space="preserve">
+        <source>Export User Wallpapers (JSON)</source>
+        <target state="translated">Экспортировать пользовательские обои (JSON)</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="refugee.navTitle.noticingEndOfMaintenance" xml:space="preserve">
         <source>End-of-Maintenance</source>
         <target state="translated">Конец обслуживания</target>
         <note/>
       </trans-unit>
-      <trans-unit id="refugee.noDataExportable" xml:space="preserve">
-        <source>No local data exportable for now. This view awaits for iCloud background data updates, but all iCloud data can be inheritable via iCloud by this app running on iOS 17 or later.</source>
-        <target state="translated">В настоящее время нет локальных данных для экспорта. Этот экран ожидает обновления фоновых данных iCloud, но все данные iCloud могут быть унаследованы via iCloud этим приложением на iOS 17 или новее.</target>
+      <trans-unit id="refugee.noDataExportable.iOS16AndEarlier" xml:space="preserve">
+        <source>No local data exportable for now. This view awaits for possibly available iCloud background data updates, unless there's no such data, but all iCloud data can be inheritable via iCloud by this app running on iOS 17 or later.</source>
+        <target state="translated">В настоящее время нет локальных данных для экспорта. Этот экран ожидает возможно доступные обновления фоновых данных iCloud, если такие данные существуют, но все данные iCloud могут быть унаследованы via iCloud этим приложением на iOS 17 или новее.</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="refugee.noDataExportable.refugeeMigratingToLatteHelper" xml:space="preserve">
+        <source>No local data exportable for now. This view awaits for possibly available iCloud background data updates, unless there's no such data.</source>
+        <target state="translated">В настоящее время нет локальных данных для экспорта. Этот экран ожидает возможно доступные обновления фоновых данных iCloud, если такие данные существуют.</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="setting.display.reduceUIGlassDecorations" xml:space="preserve">
+        <source>Reduce Glass Decorations</source>
+        <target state="translated">Уменьшить стеклянные эффекты</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="setting.display.reduceUIGlassDecorations.explain.intelMac" xml:space="preserve">
+        <source>This toggle is always active and locked on Intel Macs due to hardware performance constraints.</source>
+        <target state="translated">На Intel Mac этот переключатель всегда включён и заблокирован из-за ограничений производительности аппаратного обеспечения.</target>
         <note/>
       </trans-unit>
       <trans-unit id="setting.display.restoreTabOnLaunching" xml:space="preserve">
@@ -2866,6 +2956,16 @@ The successor to this app will be available on the App Store under the new name 
         <target state="translated">Общие настройки</target>
         <note/>
       </trans-unit>
+      <trans-unit id="settings.display.performanceSettings.sectionFooter" xml:space="preserve">
+        <source>⚠︎ Some of these settings can be overridden by system accessibility settings.</source>
+        <target state="translated">⚠︎ Некоторые из этих параметров могут быть переопределены системными параметрами специальных возможностей.</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="settings.display.performanceSettings.sectionHeader" xml:space="preserve">
+        <source>Performance Settings</source>
+        <target state="translated">Настройки Производительности</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="settings.display.timeZone4GI.description" xml:space="preserve">
         <source>The TimeZone settings in this section is for displaying at least the following information (of Genshin Impact): Daily Material, Official In-Game Events, etc.</source>
         <target state="translated">Настройки часового пояса в этом разделе предназначены для отображения как минимум следующей информации (о Genshin Impact): ежедневные материалы, официальные внутриигровые события и т. д.</target>
@@ -2896,9 +2996,9 @@ The successor to this app will be available on the App Store under the new name 
         <target state="translated">Уведомлять меня</target>
         <note/>
       </trans-unit>
-      <trans-unit id="settings.notification.dateTimePicker.macCatalystNotice" xml:space="preserve">
-        <source>⚠️ Due to a limitation in the UIKit-to-AppKit bridge framework, the DatePicker on macOS doesn’t show the input panel in macCatalyst apps. Users can only select the desired input field and type it directly on physical keyboard.</source>
-        <target state="translated">⚠️ Из-за ограничения в фреймворке UIKit-to-AppKit мост, элемент DatePicker на macOS не отображает панель ввода в приложениях macCatalyst. Пользователи могут только выбрать нужное поле ввода и набрать его непосредственно на физической клавиатуре.</target>
+      <trans-unit id="settings.notification.dateTimePicker.macCatalystOrIPAOnMacNotice" xml:space="preserve">
+        <source>⚠️ Due to a limitation in the UIKit-to-AppKit bridge framework, the DatePicker on macOS doesn’t show the input panel in macCatalyst apps or IPA-on-mac apps. Users can only select the desired input field and type it directly on physical keyboard.</source>
+        <target state="translated">⚠️ Из-за ограничения в фреймворке UIKit-to-AppKit мост, элемент DatePicker на macOS не отображает панель ввода в приложениях macCatalyst или IPA-on-mac. Пользователи могут только выбрать нужное поле ввода и набрать его непосредственно на физической клавиатуре.</target>
         <note/>
       </trans-unit>
       <trans-unit id="settings.notification.expedition.allow" xml:space="preserve">
@@ -4910,6 +5010,11 @@ available on Sunday</source>
       <trans-unit id="wpKit.assign.backgrounds4LiveActivity" xml:space="preserve">
         <source>Assign as Live Activity Background</source>
         <target state="translated">Назначить как фон живой активности</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="wpKit.gamePicker.Latte.shortName" xml:space="preserve">
+        <source>LT</source>
+        <target state="translated">ЛТ</target>
         <note/>
       </trans-unit>
       <trans-unit id="wpKit.gamePicker.Pizza.shortName" xml:space="preserve">
