--- a/_i18n_xliff/UnitedPizzaHelper Localizations/ko.xcloc/Source Contents/Packages/WallpaperKit/Sources/WallpaperConfigKit/Resources/Localizable.xcstrings
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/ko.xcloc/Source Contents/Packages/WallpaperKit/Sources/WallpaperConfigKit/Resources/Localizable.xcstrings
@@ -377,6 +377,17 @@
         }
       }
     },
+    "wpKit.gamePicker.Latte.shortName" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "LT"
+          }
+        }
+      }
+    },
     "wpKit.gamePicker.Pizza.shortName" : {
       "extractionState" : "manual",
       "localizations" : {
